; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/apm/xgene/extr_xgene_enet_xgmac.c_xgene_xgmac_rx_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/apm/xgene/extr_xgene_enet_xgmac.c_xgene_xgmac_rx_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgene_enet_pdata = type { i32 }

@AXGMAC_CONFIG_1 = common dso_local global i32 0, align 4
@HSTRFEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xgene_enet_pdata*)* @xgene_xgmac_rx_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xgene_xgmac_rx_enable(%struct.xgene_enet_pdata* %0) #0 {
  %2 = alloca %struct.xgene_enet_pdata*, align 8
  %3 = alloca i32, align 4
  store %struct.xgene_enet_pdata* %0, %struct.xgene_enet_pdata** %2, align 8
  %4 = load %struct.xgene_enet_pdata*, %struct.xgene_enet_pdata** %2, align 8
  %5 = load i32, i32* @AXGMAC_CONFIG_1, align 4
  %6 = call i32 @xgene_enet_rd_mac(%struct.xgene_enet_pdata* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load %struct.xgene_enet_pdata*, %struct.xgene_enet_pdata** %2, align 8
  %8 = load i32, i32* @AXGMAC_CONFIG_1, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @HSTRFEN, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @xgene_enet_wr_mac(%struct.xgene_enet_pdata* %7, i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @xgene_enet_rd_mac(%struct.xgene_enet_pdata*, i32) #1

declare dso_local i32 @xgene_enet_wr_mac(%struct.xgene_enet_pdata*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
